fixed popup radio button shrink issue on mobile chromium browser

--- a/components/_patterns/style.scss
+++ b/components/_patterns/style.scss
@@ -92,6 +92,7 @@ table {
         display: flex;
         input {
           margin-top: 4px;
+          flex-shrink: 0;
         }
       }
       .form-actions {
